<resources>
    <string name="app_name">Dicoding Story App</string>
    <string name="welcoming">Selamat datang di dicoding story app!</string>
    <string name="welcoming_desc">Bergabunglah untuk menciptakan karya unggul dan membangun masa depan bersama dalam lingkungan penuh semangat dan kreativitas!</string>


    <string name="register">Daftar</string>
    <string name="login">Masuk</string>
    <string name="login_text">Ayo masuk untuk berbagi cerita!</string>
    <string name="register_text">Ayo bergabung bersama komunitas lainnya!</string>

    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="nama">Nama</string>

    <string name="card_title">Lorem ipsum</string>
    <string name="card_desc">LoremIpsuim</string>

    <string name="input_name">Masukan nama</string>
    <string name="input_email">Masukan email</string>
    <string name="input_password">Masukan password</string>

    <string name="longLorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Faucibus interdum posuere lorem ipsum. Augue ut lectus arcu bibendum at varius. Habitant morbi tristique senectus et netus et. Ullamcorper sit amet risus nullam eget felis. Viverra tellus in hac habitasse platea. In vitae turpis massa sed. Sapien nec sagittis aliquam malesuada bibendum. Dignissim cras tincidunt lobortis feugiat vivamus. Commodo odio aenean sed adipiscing diam donec adipiscing tristique risus. Malesuada proin libero nunc consequat interdum varius sit amet mattis. Amet aliquam id diam maecenas ultricies mi eget mauris. In cursus turpis massa tincidunt dui ut. Ultricies integer quis auctor elit sed.

Non diam phasellus vestibulum lorem. Ipsum nunc aliquet bibendum enim facilisis gravida neque. Pulvinar pellentesque habitant morbi tristique senectus et netus et. Tortor condimentum lacinia quis vel eros donec. Ornare arcu dui vivamus arcu felis bibendum. Ipsum suspendisse ultrices gravida dictum fusce ut. Lacus luctus accumsan tortor posuere. Diam vulputate ut pharetra sit amet. Urna nunc id cursus metus aliquam eleifend mi in. Neque egestas congue quisque egestas diam in. Urna condimentum mattis pellentesque id nibh tortor. In arcu cursus euismod quis viverra.</string>

    <string name="logoutDialogTitle">Apakah anda yakin ingin keluar?</string>
    <string name="cancel">Tidak</string>
    <string name="accept">Ya</string>


    <string name="uploadStory">Upload Story</string>


    <string name="descStory">Description</string>
    <string name="detailImageStory">Preview Image Story</string>

    <string name="passwordTextValidation">
        Password harus memiliki minimal 8 karakter.
    </string>

    <string name="emailTextValidation">
        Email tidak valid.
    </string>

    <string name="nameTextValidation">
        Nama tidak boleh kosong minimal 3 karakter.
    </string>
    <string name="retry">Retry</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>